...
        visible: Boolean,
        offset: IntOffset,
        onDismissRequest: () -> Unit,
        content: @Composable () -> Unit,
    ) {
        if (visible) {
            Popup(
                alignment = Alignment.BottomEnd,
                offset = offset,
                onDismissRequest = onDismissRequest,
                properties = PopupProperties(focusable = expanded),
                content = content,
            )
...
